--- a/assets/general/S25/schedule.tex
+++ b/assets/general/S25/schedule.tex
@@ -43,7 +43,7 @@
 
 
 \begin{document}
-\hfill \small \emph{version 3: \today} \normalsize
+\hfill \small \emph{version 4: \today} \normalsize
 
 \bigskip\bigskip
 \centerline{\Large \textbf{Weekly Schedule}}
@@ -72,7 +72,7 @@
 
 \wkday{5}{2/10}{2/14}   & \hdue{A3} &  &  \\ \hline
 
-\wkday{6}{2/17}{2/21}   & \ch{3} &  &  \\ \hline
+\wkday{6}{2/17}{2/21}   & \ch{3} &  & \hdue{A4} \\ \hline
 
 \wkday{7}{2/24}{2/28}   &  & \ch{5} &  \\ \hline
 
