--- a/assets/homework/S25/A4.tex
+++ b/assets/homework/S25/A4.tex
@@ -94,9 +94,7 @@ width=#3in]{#1.eps}}
 \bigskip
 Please read sections 2.12--2.18 and 3.1--3.7 from the textbook.\footnote{R.~J.~LeVeque, \emph{Finite Difference Methods for Ordinary and Partial Diff.~Eqns.}, SIAM Press 2007}  You don't need to read 2.19--2.21, as there will be no homework or exam questions on that material.  (However, it is cool stuff, especially spectral methods!)
 
-FIXME DRAFT ONLY
-
-\prob{Problem P15.}  \emph{Nonlinear pendulum.}   Write a program to solve the BVP for the nonlinear pendulum as discussed in the text, i.e.~problem (2.77), using the Newton iteration strategy outlined in subsection 2.16.1.  Reproduce Figures 2.4(b) and 2.5, for which $T=2\pi,\alpha=\beta=0.7$.
+\prob{Problem P15.}  \emph{Nonlinear pendulum.}   Write a program to solve the BVP for the nonlinear pendulum as discussed in the text, i.e.~problem (2.77), using the Newton iteration strategy outlined in subsection 2.16.1.  Reproduce Figures 2.4(b) and 2.5, for which $T=2\pi$ and $\alpha=\beta=0.7$.
 
 
 \prob{Problem P16.}  \emph{A boundary layer.}   Recall the ODE BVPs from \textbf{P12} on Assignment \#3:
@@ -104,26 +102,20 @@ FIXME DRAFT ONLY
 u''(x) + p(x)\, u'(x) + q(x)\, u(x) = f(x), \quad u(a) = \alpha, \quad u(b) = \beta.
 \end{equation*}
 
-\epart{a}  Consider the case $a=0$, $b=1$, $\alpha=1$, $\beta=0$, $p=-30$, $q=0$, and $f(x)=0$.  Confirm that an exact solution to this problem is
+\epart{a}  Consider the case $a=0$, $b=1$, $\alpha=1$, $\beta=0$, $p(x)=-30$, $q(x)=0$, and $f(x)=0$.  Confirm that the exact solution to this problem is
     $$u(x) = 1 - \frac{1 - e^{30x}}{1-e^{30}}.$$
-(\emph{I claim it is the only solution.  You don't need to check that.})
 
 \epart{b}  Solve the problem in part \textbf{(a)} numerically using centered finite differences, $h=1/(m+1)$ equal spacing, and $m=3,5,10,20,50,200,1000$ interior points.  Put all these numerical solutions, and also the exact solution from \textbf{(a)}, on one figure.  Make sure to apply decent labeling to your figure, using \texttt{legend} or similar.  (\emph{There is no need to start from scratch on this code!  Modify an existing, working code.  Mention/cite what you started from.})
 
-\epart{c}  Observe that the solutions for small values of $m$ are poor but the high $m$ solutions all basically agree.  Why do you think that small $m$ values are problematic here, though they are not for the problem solved in section 2.4?   Write a couple of paragraphs about the situation, exploiting section 2.17 and/or wikipedia pages. (\emph{Hint.  Observe that the exact solution in part} \textbf{(a)} \emph{mostly does not ``feel'' one of the boundary conditions.  Also consider the $p=+30$ case, with other data the same; address how the exact solution works in that case.  What is the exact solution to the reduced equation $pu'=0$ and what boundary conditions does it need?})
+\epart{c}  You should observe that the solutions for small values of $m$ are poor, but that the high $m$ solutions basically agree with the exact solution.  Why do you think that small $m$ values are qualitatively problematic here, though they are not for the problem solved in section 2.4?   Write a couple of paragraphs about the situation, exploiting section 2.17 and/or wikipedia pages. (\emph{Hint.  Observe that the exact solution in part} \textbf{(a)} \emph{mostly does not ``feel'' one of the boundary conditions.  Also consider the $p=+30$ case, with other data the same; address how the exact solution works in that case.  What is the exact solution to the reduced equation $pu'=0$ and what boundary conditions does it need?})
 
 
 \prob{Problem P17.}  (\emph{Poisson equation on the unit square.})
 
-\epart{a}  Based on the ideas in sections 3.1--3.3, namely centered finite differences, write a \Matlab/etc.~code that solves Poisson equation (3.5) on the unit square $0\le x \le 1, 0 \le y \le 1$, with zero Dirichlet boundary conditions.  Allow the user to set the function $f=f(x,y)$.  You may, as usual, use \Matlab's backslash, or equivalent, to solve the linear system.
+\epart{a}  Based on the ideas in sections 3.1--3.3, namely centered finite differences, write a \Matlab/etc.~code that solves Poisson equation (3.5) on the unit square $0\le x \le 1$, $0 \le y \le 1$, with zero Dirichlet boundary conditions.  Allow the user to set the function $f(x,y)$.  For simplicity, and notational consistency with the book and my solutions, please use equally-spaced grids, with $\Delta x = \Delta y = h = 1 / (m+1)$, where $m$ is the number of interior grid points in each direction.  You may, as usual, use \Matlab's backslash, or equivalent, to solve the linear system.  Feel free to start from an existing code, but identify the source.
 
-\medskip
-\noindent \emph{Hint.}  Start from my code \texttt{heat2d.m} at
+\epart{b}  Use \Matlab's \texttt{spy}, or similar, to show the sparsity pattern of the matrix $A^h$ for $m=5$.  Also confirm, in that $m=5$ case, that the matrix has the form shown by equation (3.12).
 
-\url{https://bueler.github.io/nade/assets/codes/heat2d.m}.
-
-\epart{b}  Find an appropriate nonzero exact solution that allows you to verify that the code converges at the theoretically-expected rate.  That is, show that $\|E^h\|_2 \to 0$, as $h\to 0$, at the rate $O(h^2)$ if $\Delta x = \Delta y = h = 1 / (m+1)$.
-
-\epart{c}  Use \Matlab's \texttt{spy}, or similar, to show the sparsity pattern of the matrix $A^h$ for $m=5$.  Also confirm in that case that the matrix has the form shown by equation (3.12).
+\epart{c}  Find an appropriate nonzero exact solution that allows you to verify that the code converges at the theoretically-expected rate in the $2$-norm.  That is, show that $\|E^h\|_2 \to 0$, as $h\to 0$, at the rate $O(h^2)$.
 
 \end{document}
