--- a/assets/homework/S25/A4.tex
+++ b/assets/homework/S25/A4.tex
@@ -11,6 +11,7 @@
 \usepackage{verbatim,fancyvrb}
 \usepackage{soul}
 \usepackage{palatino}
+\usepackage[dvipsnames]{xcolor}
 
 \newtheorem*{thm}{Theorem}
 \newtheorem*{defn}{Definition}
@@ -76,7 +77,7 @@ width=#3in]{#1.eps}}
 
 
 \begin{document}
-\scriptsize \noindent Math 615 NADE (Bueler) \hfill 10 February, 2025
+\scriptsize \noindent Math 615 NADE (Bueler) \hfill version 2: 19 February, 2025
 \normalsize
 
 \medskip\bigskip
@@ -85,7 +86,7 @@ width=#3in]{#1.eps}}
 \large
 \bigskip
 
-\centerline{\textbf{Due Friday, 21 February 2025, at the start of class}}
+\centerline{{\color{BrickRed} \textbf{Due Monday, 24 February 2025, at the start of class (\emph{updated})}}}
 \bigskip
 \normalsize
 
@@ -112,7 +113,7 @@ u''(x) + p(x)\, u'(x) + q(x)\, u(x) = f(x), \quad u(a) = \alpha, \quad u(b) = \b
 
 \prob{Problem P17.}  (\emph{Poisson equation on the unit square.})
 
-\epart{a}  Based on the ideas in sections 3.1--3.3, namely centered finite differences, write a \Matlab/etc.~code that solves Poisson equation (3.5) on the unit square $0\le x \le 1$, $0 \le y \le 1$, with zero Dirichlet boundary conditions.  Allow the user to set the function $f(x,y)$.  For simplicity, and notational consistency with the book and my solutions, please use equally-spaced grids, with $\Delta x = \Delta y = h = 1 / (m+1)$, where $m$ is the number of interior grid points in each direction.  You may, as usual, use \Matlab's backslash, or equivalent, to solve the linear system.  Feel free to start from an existing code, but identify the source.
+\epart{a}  Based on the ideas in sections 3.1--3.3, namely centered finite differences, write a \Matlab/etc.~code that solves Poisson equation (3.5) on the unit square $0\le x \le 1$, $0 \le y \le 1$, with zero Dirichlet boundary conditions.  Allow the user to set the function $f(x,y)$.  For simplicity, and notational consistency with the book, please use equally-spaced grids, with $\Delta x = \Delta y = h = 1 / (m+1)$, where $m$ is the number of interior grid points in each direction.  You may, as usual, use \Matlab's backslash, or equivalent, to solve the linear system.  Feel free to start from an existing code, but please identify the source.
 
 \epart{b}  Use \Matlab's \texttt{spy}, or similar, to show the sparsity pattern of the matrix $A^h$ for $m=5$.  Also confirm, in that $m=5$ case, that the matrix has the form shown by equation (3.12).
 
