schedule change: Midterm Exam on Fri 3/21, after Spring Break

--- a/assets/general/S25/syllabus.tex
+++ b/assets/general/S25/syllabus.tex
@@ -50,7 +50,9 @@
 
 %\strut\par\vskip-12pt
 %\heading{Essential Information}
-\phantom{x}
+%\phantom{x}
+
+\noindent \textsf{\color{red} SYLLABUS VERSION 2, 24 February 2025}
 
 \strut\hbox to \hsize{\tableindent\vtop{\halign{#\hfill\ts&#\hfil\cr
 {\emph{Course Title}} & {\large Numerical Analysis of Differential Equations} \cr
@@ -113,7 +115,7 @@ Project: proposal & due Monday 31 March & 5\%  \\
 \hline
 Project: completed & due 5pm Monday 28 April & 15\%  \\
 \hline
-Midterm Exam & in-class Friday 7 March & 20\%  \\
+{\color{red} Midterm Exam} & {\color{red} in-class Friday 21 March (\textsl{updated})} & 20 \%  \\
 \hline
 Final Exam & \, in-class \emph{Thursday 1 May, 3:15--5:15pm} \, & 15\% \\
 \hline
