--- a/assets/general/S25/schedule.tex
+++ b/assets/general/S25/schedule.tex
@@ -43,7 +43,7 @@
 
 
 \begin{document}
-\hfill \small \emph{version 5: \today} \normalsize
+\hfill \small \emph{version 6: \today} \normalsize
 
 \bigskip\bigskip
 \centerline{\Large \textbf{Weekly Schedule}}
@@ -76,11 +76,11 @@
 
 \wkday{7}{2/24}{2/28}   & \hdue{A4} & \ch{5} &  \\ \hline
 
-\wkday{8}{3/3}{3/7}     &  &  & \ee{Midterm Exam} \\ \hline
+\wkday{8}{3/3}{3/7}     &  &  & \\ \hline
 
 \wkday{9}{3/10}{3/14}   & \vac{Spring Break} & \vac{Spring Break} & \vac{Spring Break} \\ \hline
 
-\wkday{10}{3/17}{3/21}  &  & \ch{6} &  \\ \hline
+\wkday{10}{3/17}{3/21}  & \hdue{A5} & \ch{6} & \ee{Midterm Exam} \par \ee{(\textsl{updated})} \\ \hline
 
 \wkday{11}{3/24}{3/28}  & \proj{Project announced} & \ch{7} & \dl{withdrawals} \\ \hline
 
