--- a/assets/general/S25/schedule.tex
+++ b/assets/general/S25/schedule.tex
@@ -43,7 +43,7 @@
 
 
 \begin{document}
-\hfill \small \emph{version 6: \today} \normalsize
+\hfill \small \emph{version 7: \today} \normalsize
 
 \bigskip\bigskip
 \centerline{\Large \textbf{Weekly Schedule}}
@@ -59,7 +59,7 @@
 
 \bigskip
 
-\begin{tabularx}{1.03\textwidth}{l|>{\raggedright\arraybackslash}X|X|X|}
+\begin{tabularx}{1.0\textwidth}{l|>{\raggedright\arraybackslash}X|X|X}
 \textbf{Week} \quad Dates & M & W & F \\ \hline
 
 \wkday{1}{1/13}{1/17}   &  & \ch{1} & \\ \hline
@@ -76,11 +76,11 @@
 
 \wkday{7}{2/24}{2/28}   & \hdue{A4} & \ch{5} &  \\ \hline
 
-\wkday{8}{3/3}{3/7}     &  &  & \\ \hline
+\wkday{8}{3/3}{3/7}     &  &  & \hdue{A5} \\ \hline
 
 \wkday{9}{3/10}{3/14}   & \vac{Spring Break} & \vac{Spring Break} & \vac{Spring Break} \\ \hline
 
-\wkday{10}{3/17}{3/21}  & \hdue{A5} & \ch{6} & \ee{Midterm Exam} \par \ee{(\textsl{updated})} \\ \hline
+\wkday{10}{3/17}{3/21}  &  & \ch{6} & \ee{Midterm Exam} \par \ee{(\textsl{updated})} \\ \hline
 
 \wkday{11}{3/24}{3/28}  & \proj{Project announced} & \ch{7} & \dl{withdrawals} \\ \hline
 
@@ -92,7 +92,7 @@
 
 \wkday{15}{4/21}{4/25}  &  &  &  \\ \hline
 
-\wkday{16}{4/28}{5/2}   & \par {\scriptsize yes, a class day} \par \proj{Project due} & \ee{Final Exam} \par \ee{THURSDAY 5/1 $\to$} \par 3:15--5:15pm &  \\ \hline
+\wkday{16}{4/28}{5/2}   & \par {\scriptsize yes, a class day} \par \proj{Project due} & \ee{Final Exam} \par \ee{THURSDAY 5/1 $\to$} \par 3:15--5:15pm & 
 
 \end{tabularx}
 
