--- a/assets/homework/S25/A5.tex
+++ b/assets/homework/S25/A5.tex
@@ -86,38 +86,41 @@ width=#3in]{#1.eps}}
 \large
 \bigskip
 
-\centerline{\textbf{Due Monday, 17 March 2025, at the start of class}}
+\centerline{\textbf{Due Friday, 7 March 2025, at the start of class}}
 \bigskip
 \normalsize
 
 \thispagestyle{empty}
 
 \bigskip
-Please read textbook\footnote{R.~J.~LeVeque, \emph{Finite Difference Methods for Ordinary and Partial Diff.~Eqns.}, SIAM Press 2007} sections 5.1–5.8, plus Appendices C and D.
+Please read textbook\footnote{R.~J.~LeVeque, \emph{Finite Difference Methods for Ordinary and Partial Diff.~Eqns.}, SIAM Press 2007} sections 5.1–5.7, plus Appendices C and D.
 
+\bigskip
 \noindent \hrulefill
 
 These problems on this Assignment use eigenvalues.  I assume you have already had a course in linear algebra, so this is a review topic.  \textbf{Here is a quick review.}
 
-By definition, a \underline{nonzero} vector $v\in \RR^m$ is an \emph{eigenvector} of a square matrix $A \in \RR^{m\times m}$ if multiplication by $A$ merely lengthens or shortens it:
-\begin{equation}
-    A v = \lambda v.  \label{eig}
-\end{equation}
-The number $\lambda$ is called the \emph{eigenvalue} corresponding to $v$.  Note that ``eigen'' means something like ``property of'', so $v$ and $\lambda$ are in some sense owned by $A$.
+As usual, $\RR$ denotes the real numbers and $\CC$ the complex numbers.  By definition, a \underline{nonzero} vector $v\in \CC^m$ is an \emph{eigenvector} of a \underline{real} square matrix $A \in \RR^{m\times m}$ if multiplication by $A$ merely lengthens or shortens it:
+\begin{equation*}
+    A v \stackrel{\ast}{=} \lambda v.
+\end{equation*}
+The number $\lambda \in \CC$ is called the \emph{eigenvalue} corresponding to $v$.  Note that ``eigen'' means something like ``property of'', so $v$ and $\lambda$ are in some sense owned by $A$.
 
-If \eqref{eig} holds then the matrix $\lambda I - A$ has a nonzero vector in its null space.  That is, any nonzero multiple of $v$ is sent by $\lambda I - A$ to zero: $(\lambda I - A) v = 0$.  By the fundamental equivalence in linear algebra, \eqref{eig} holds if and only if $\lambda I - A$ is not invertible.
+If $\ast$ holds then the matrix $\lambda I - A$ has a nonzero vector in its null space.  That is, any nonzero multiple of $v$ is sent by $\lambda I - A$ to zero: $(\lambda I - A) v = 0$.  By the fundamental equivalence in linear algebra, $\ast$ holds if and only if $\lambda I - A$ is not invertible.
 
 In particular, $\det(\lambda I - A) = 0$, which is a polynomial equation with real coefficients:
     $$p(\lambda) = \det(\lambda I - A).$$
 (Recall we assumed $A$ had real entries.)  Finding all the eigenvalues is equivalent to finding all the roots of the \emph{characteristic polynomial} $p(\lambda)$.  Generally, these roots are complex:
-    $$\text{in general, for real } A \in \RR^{m\times m}, \text{ we have } \lambda\in \CC.$$
-However, because the coefficients of the polynomial are real, if $\lambda$ is complex (i.e.~not real) then its conjugate $\bar \lambda$ is also a root of the polynomial and thus an eigenvalue of $A$.
+    $$\text{in general, even for real } A \in \RR^{m\times m}, \text{ we have } \lambda\in \CC.$$
+However, because the coefficients of the polynomial are real, if $\lambda$ is complex (i.e.~not real) then its conjugate $\bar \lambda$ is also a root of the polynomial and thus an eigenvalue of $A$.  Note that if $A$ is real and $\lambda$ is complex then $v$ must also be complex, since $\ast$ holds.
 
+\medskip
 \emph{Fact.}  If $A$ is symmetric $A^\top = A$ then the eigenvalues of $A$ are real.
 
+\medskip
 Now suppose $\lambda$ is an eigenvalue of $A$.  Finding a corresponding eigenvector asks to find a vector in the null space of a matrix.  In particular, the row operations of Gauss elimination will convert the equation $(\lambda I - A) v = 0$ into an upper triangular equation $U v = 0$ where $U$ is both upper triangular and has at least one row of zeros.  (\emph{This is because $\lambda I - A$ is not invertible.})  The matrix equation $U v = 0$ can be used to generate every eigenvector corresponding to $\lambda$, the \emph{eigenspace} for $\lambda$.  This eigenspace has dimension at least one.
 
-Appendices C and D cover more advanced eigen-topics, and you will use the basic ideas in section D.3 on matrix exponentials.
+Appendices C and D cover more advanced eigen-topics.  On this Assignment you will use the basic ideas in section D.3 on matrix exponentials.
 
 \noindent \hrulefill
 \clearpage \newpage
@@ -129,18 +132,18 @@ Appendices C and D cover more advanced eigen-topics, and you will use the basic 
                          -1 & 1  & 0  \end{bmatrix}.$$
 Show all your work.  (\emph{Hint: The characteristic polynomial has integer roots.  You may \emph{check} your work with \Matlab.})
 
-\epart{b}  Continuing with the same matrix $A$, do the following using $\Matlab$ etc., and show the command-line session or code:  Choose a vector $u\in\RR^3$ at random, for instance \texttt{u = randn(3,1)}.  Apply $A$ to it 50 times: $w = A^{50} u$.  Now compute $\|A w\|_2/\|w\|_2$.  You will get the number $2.0000$.  Why?  Explain in several sentences, using equations to make it clear.
+\epart{b}  Continuing with the same matrix $A$, do the following using $\Matlab$ etc., and show the command-line session or code:  Choose a vector $u\in\RR^3$ at random, for instance \texttt{u = randn(3,1)}.  Apply $A$ to it 50 times: $w = A^{50} u$.  Now compute $\|A w\|_2/\|w\|_2$.  You will get the number $2$.  Why?  Explain in several sentences, using equations to make it clear.
 
 \medskip
-\noindent \emph{Hint for} \textbf{(b)}.  \emph{The eigenvectors of a symmetric matrix form a basis.  Any vector can be written in this basis.  On the other hand, multiplication by \emph{this} $A$ stretches one basis vector the most.}
+\noindent \emph{Hint for} \textbf{(b)}.  \emph{The eigenvectors of a symmetric matrix form a basis.  Any vector can be written in this basis.  On the other hand, multiplication by \emph{this} $A$ stretches one basis vector much more than the others.}
 
 \epart{c}  Note that $w = A^{50} u$ from part \textbf{(b)} is very large in norm.  Why?  For a random $u$ and \emph{this} matrix $A$, give an upper bound on the norm of the vector $A^k u$ for large $k$.
 
 
-\prob{Problem P19.}  \emph{This problem considers the eigenvalues of \emph{non-symmetric} real matrices.  Do not show me the matrices!  Your solution is your code and your percentage estimate.}
+\prob{Problem P19.}  \emph{This problem considers the eigenvalues of \emph{non-symmetric} real matrices, which are very frequently seen when solving systems of linear (or linearized) ODEs.  Do not show me the matrices!  Your solution is your code and your percentage estimates.}
 
 \medskip \noindent
-Write a short program that computes 100 random $3\times 3$ matrices with entries which are independent, normally-distributed, mean zero, variance one random numbers.  In \Matlab, \verb| A = randn(3,3) | generates such a matrix.  FIXME
+Write a short program that computes at least 100 random $3\times 3$ matrices with real entries which are independent, normally-distributed, mean zero, variance one random numbers.  (In \Matlab, \verb| A = randn(3,3) | generates such a matrix.)  For each matrix, compute its eigenvalues numerically---in \Matlab: \verb|eig(A)|---and determine if they are all real or if at least one eigenvalue is complex.  What percentage of such random matrices have exclusively real eigenvalues?  What percentage of such random matrices are symmetric, e.g.~have $\|A-A^\top\|<10^{-10}$?  What percentage of such random matrices are not invertible, e.g.~have $|\det(A)|<10^{-10}$?
 
 
 \prob{Problem P20.}  \ppart{a} The ODE IVP
@@ -153,7 +156,7 @@ has solution $v(t) = v_0 \cos(3 t) + \frac{w_0}{3} \sin(3t)$.  Verify this.
 \prob{Problem P21.}  Check that the solution $u(t)$ given by Duhamel's principle, equation (5.8) in the textbook, satisfies ODE (5.6) and the initial condition $u(t_0)=\eta$.
 
 \medskip
-\noindent \emph{Hint.}  Look up the Leibniz rule for differentiating an integral?  To understand and explain the simple result of differentiating the matrix exponential, note you can differentiate the absolutely-convergent Taylor series (D.31), in Appendix D, term by term.
+\noindent \emph{Hint.  Look up the Leibniz rule for differentiating an integral.  To understand and explain the simple result of differentiating the matrix exponential, note you can differentiate the absolutely-convergent Taylor series (D.31), in Appendix D, term by term.}
 
 
 \prob{Problem P22.}  Consider the ODE system
@@ -169,5 +172,15 @@ with initial conditions at $t=0$: $u_1(0) = a, u_2(0) = b$.  Solve this system t
 
 \medskip
 \noindent \emph{Hints. The diagonalization of $A$ can be done by hand.  Simplify the results of each part sufficiently to see the same solution.}
+
+
+
+\prob{Problem P23.}  \emph{This problem is to help you read section 5.2.  You have to deal with notation, and partial derivatives, and matrices, and norms.  The vector $\infty$-norm is defined in equation (A.3).  For an $m\times m$ matrix $A$, the matrix $\infty$-norm is computed by $\|A\|_\infty = \max_{1\le i\le m} \sum_{j=1}^m |a_{ij}|$,
+the maximum (absolute) row sum, equation (A.10b).}
+
+\epart{a} For Example 5.1 on pages 113--114, note that the system can be written in first-order system form $u'(t) = f(u(t),t)$ for $u(t) \in \RR^3$.  (The form is given on page 114.)  Compute $f_u(u,t)$, which is the Jacobian matrix. 
+
+\epart{b}  Let $\eta = (0,0,0)^\top$.  Let $\mathcal{D} = \{(u,t)\,:\,\|u - \eta\|_\infty \le 10, 0 \le t \le 1\}$.  Compute the $\infty$-norm Lipschitz constant
+	$$L = \max_{(u,t)\in\mathcal{D}} \|f_u(u,t)\|_\infty.$$
 
 \end{document}
