update schedule and syllabus: project proposal due Wed 4/2

--- a/assets/general/S25/schedule.tex
+++ b/assets/general/S25/schedule.tex
@@ -43,7 +43,7 @@
 
 
 \begin{document}
-\hfill \small \emph{version 7: \today} \normalsize
+\hfill \small \emph{version 8: \today} \normalsize
 
 \bigskip\bigskip
 \centerline{\Large \textbf{Weekly Schedule}}
@@ -80,11 +80,11 @@
 
 \wkday{9}{3/10}{3/14}   & \vac{Spring Break} & \vac{Spring Break} & \vac{Spring Break} \\ \hline
 
-\wkday{10}{3/17}{3/21}  &  & \ch{6} & \ee{Midterm Exam} \par \ee{(\textsl{updated})} \\ \hline
+\wkday{10}{3/17}{3/21}  &  & \ch{6} & \ee{Midterm Exam} \\ \hline
 
 \wkday{11}{3/24}{3/28}  & \proj{Project announced} & \ch{7} & \dl{withdrawals} \\ \hline
 
-\wkday{12}{3/31}{4/4}   & \proj{Project proposal due} & \ch{8} & \\ \hline
+\wkday{12}{3/31}{4/4}   & \hdue{A6} & \ch{8} \par \proj{Project proposal due} & \\ \hline
 
 \wkday{13}{4/7}{4/11}   & \ch{9} &  &  \\ \hline
 
