--- a/assets/general/S25/syllabus.tex
+++ b/assets/general/S25/syllabus.tex
@@ -52,7 +52,7 @@
 %\heading{Essential Information}
 %\phantom{x}
 
-\noindent \textsf{\color{red} SYLLABUS VERSION 2, 24 February 2025}
+\noindent \textsf{\color{red} SYLLABUS VERSION 3, 18 March 2025}
 
 \strut\hbox to \hsize{\tableindent\vtop{\halign{#\hfill\ts&#\hfil\cr
 {\emph{Course Title}} & {\large Numerical Analysis of Differential Equations} \cr
@@ -111,11 +111,11 @@ I hold \href{http://bueler.github.io/OffHrs.htm}{Office Hours} in Chapman 306C a
 \hline
 Homework & nearly weekly & 45\% \\
 \hline
-Project: proposal & due Monday 31 March & 5\%  \\
+Project: proposal & {\color{red} due Wednesday 2 April (\textsl{updated})} & 5\%  \\
 \hline
 Project: completed & due 5pm Monday 28 April & 15\%  \\
 \hline
-{\color{red} Midterm Exam} & {\color{red} in-class Friday 21 March (\textsl{updated})} & 20 \%  \\
+Midterm Exam & {\color{red} in-class Friday 21 March (\textsl{updated})} & 20 \%  \\
 \hline
 Final Exam & \, in-class \emph{Thursday 1 May, 3:15--5:15pm} \, & 15\% \\
 \hline
