put project go date

--- a/assets/general/S25/schedule.tex
+++ b/assets/general/S25/schedule.tex
@@ -43,7 +43,7 @@
 
 
 \begin{document}
-\hfill \small \emph{version 8: \today} \normalsize
+\hfill \small \emph{version 9: \today} \normalsize
 
 \bigskip\bigskip
 \centerline{\Large \textbf{Weekly Schedule}}
@@ -82,7 +82,7 @@
 
 \wkday{10}{3/17}{3/21}  &  & \ch{6} & \ee{Midterm Exam} \\ \hline
 
-\wkday{11}{3/24}{3/28}  & \proj{Project announced} & \ch{7} & \dl{withdrawals} \\ \hline
+\wkday{11}{3/24}{3/28}  & & \proj{Project announced} & \ch{7} \par \dl{withdrawals} \\ \hline
 
 \wkday{12}{3/31}{4/4}   & \hdue{A6} & \ch{8} \par \proj{Project proposal due} & \\ \hline
 
